# cenerator

./: .gitignore  pyproject.toml
cenerator/: pack.py
examples/: .gitignore  execute.py  hello_world.py  include.py  macro.py  storage.py
examples/include_files/: example_file.txt
examples/include_files/data/include/tags/blocks/: example_tag.json
tests/: packmock.py  test_execute.py  test_pack.py
